<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUpAccountActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="@dimen/dimen_70dp"
                android:layout_marginRight="@dimen/dimen_5dp"
                android:src="@drawable/user" />

            <ImageView
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="@dimen/dimen_70dp"
                android:layout_marginRight="@dimen/dimen_5dp"
                android:src="@drawable/general" />

            <ImageView
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="@dimen/dimen_70dp"
                android:layout_marginRight="@dimen/dimen_5dp"
                android:src="@drawable/health" />

            <ImageView
                android:layout_width="@dimen/dimen_70dp"
                android:layout_height="@dimen/dimen_70dp"
                android:layout_marginRight="@dimen/dimen_5dp"
                android:src="@drawable/habit" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dimen_30dp"
            android:layout_marginRight="@dimen/dimen_30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/user"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/general"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/health"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dimen_10dp"
                android:text="@string/habit"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/next_button"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/id"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/error_id_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/errod_id"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="14dp"
                        android:visibility="gone" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_id"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/grey_ten_radius_corner_rectangle_background"
                    android:digits="@string/form_english_and_numbers"
                    android:ems="10"
                    android:inputType="textCapCharacters"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/password"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/error_password_format_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/text_confirm_password_format"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="14dp"
                        android:visibility="gone" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/grey_ten_radius_corner_rectangle_background"
                    android:digits="@string/form_english_and_numbers"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:text="@string/confirmPassword"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/error_confirm_password_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="10dp"
                        android:text="@string/text_confirm_password_different_with_password"
                        android:textColor="@android:color/holo_red_light"
                        android:textSize="14dp"
                        android:visibility="gone" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_confirm"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/grey_ten_radius_corner_rectangle_background"
                    android:digits="@string/form_english_and_numbers"
                    android:hint="@string/password_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="12"
                    android:maxLines="1"
                    android:nextFocusForward="@id/text_notuse"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/text_notuse"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/next_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/corner_enable"
            android:text="@string/next"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </RelativeLayout>
</LinearLayout>





